--- a/static/index.html
+++ b/static/index.html
@@ -40,7 +40,7 @@
             <div class="hero-cols 2">
 
                 <p class="label-description">
-                    Work Experience
+                    About Him
                 </p>
                 <p>Known for his versatile capabilities and creative solutions, designing ideas and executing solutions.
                     Designing professionally for companies and startups since 2021. Experienced in Web Design and UI/UX,
@@ -49,6 +49,36 @@
         </div>
     </div>
     <!-- Work -->
+     <div class="work">
+        <div class="boxes box-1">
+            Box 1
+        </div>
+        <div class="boxes box-2">
+            Box 2
+        </div>
+        <div class="boxes box-3">
+            Box 3
+        </div>
+        <div class="boxes box-4">
+            Box 4
+        </div>
+        <div class="boxes box-5">
+            Box 5
+        </div>
+        <div class="boxes box-6">
+            Box 6
+        </div>
+        <div class="boxes box-7">
+            Box 7
+        </div>
+        <div class="boxes box-8">
+            Box 8
+        </div>
+        <div class="boxes box-9">
+            Box 9
+        </div>
+        
+     </div>
     <!-- footer -->
 </body>
 
