--- a/static/index.html
+++ b/static/index.html
@@ -49,34 +49,23 @@
         </div>
     </div>
     <!-- Work -->
-     <div class="work">
-        <div class="boxes box-1">
-            Box 1
-        </div>
-        <div class="boxes box-2">
-            Box 2
-        </div>
-        <div class="boxes box-3">
-            Box 3
-        </div>
-        <div class="boxes box-4">
-            Box 4
-        </div>
-        <div class="boxes box-5">
-            Box 5
-        </div>
-        <div class="boxes box-6">
-            Box 6
-        </div>
-        <div class="boxes box-7">
-            Box 7
-        </div>
-        <div class="boxes box-8">
-            Box 8
-        </div>
-        <div class="boxes box-9">
-            Box 9
-        </div>
+     <div class="work grid">
+        <div class="boxes">Box 1</div>
+        <div class="boxes">Box 2</div>
+        <div class="boxes">Box 3</div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
         
      </div>
     <!-- footer -->
