--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,17 @@
                 <h2>Contact</h2>
             </a></li>
     </ul>
+    <ul class="navbar-mobile">
+        <li><a href="./index.html">
+                <h2>Home</h2>
+            </a></li>
+        <li><a href="#Work">
+                <h2>Work</h2>
+            </a></li>
+        <li><a href="#footer">
+                <h2>Contact</h2>
+            </a></li>
+    </ul>
     <!-- Hero  -->
     <div class="hero">
         <h1>Rayyan Eka Putra</h1>
@@ -31,10 +42,10 @@
                 <p class="label-description">
                     Work Experience
                 </p>
-                <p>Finku - Web Designer (2021-2024)<br/>
-                    ONEBOX - Web Designer (2024-Present)<br/>
-                    Foundstrap - Web Designer (2024)<br/>
-                    AfterAnother - Web Designer (2024-Present)<br/>
+                <p>Finku - Web Designer (2021-2024)<br />
+                    ONEBOX - Web Designer (2024-Present)<br />
+                    Foundstrap - Web Designer (2024)<br />
+                    AfterAnother - Web Designer (2024-Present)<br />
                     Quicksite - Design Lead (2024)</p>
             </div>
             <div class="hero-cols 2">
@@ -42,14 +53,14 @@
                 <p class="label-description">
                     About Him
                 </p>
-                <p>Known for his versatile capabilities and creative solutions, designing ideas and executing solutions.
+                <p class="about-me">Known for his versatile capabilities and creative solutions, designing ideas and executing solutions.
                     Designing professionally for companies and startups since 2021. Experienced in Web Design and UI/UX,
                     specifically prototyping and POC.</p>
             </div>
         </div>
     </div>
     <!-- Work -->
-     <div class="work grid">
+    <div class="work grid">
         <div class="boxes">Box 1</div>
         <div class="boxes">Box 2</div>
         <div class="boxes">Box 3</div>
@@ -66,9 +77,24 @@
         <div class="boxes"></div>
         <div class="boxes"></div>
         <div class="boxes"></div>
-        
-     </div>
+
+    </div>
     <!-- footer -->
+     <div class="footer">
+        <ul class="footer-socials">
+            <li><a href="https://www.linkedin.com/in/rayyan-eka-putra/" target="_blank">
+                    <p>Linkedin</p>
+                </a></li>
+            <li><a href="https://dribbble.com/rayyanekaputra" target="_blank">
+                    <p>Dribbble</p>
+                </a></li>
+            <li><a href="https://instagram.com/rayyanekaputra" target="_blank">
+                    <p>Instagram</p>
+                </a></li>
+        </ul>
+        <p class="credit">proudly created by rayyan ©</p>
+     </div>
+    
 </body>
 
 </html>
