--- a/static/index.html
+++ b/static/index.html
@@ -7,6 +7,8 @@
     <title>Rayyan Eka Putra</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./mobile-style.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -34,7 +36,7 @@
             </a></li>
     </ul>
     <!-- Hero  -->
-    <div class="hero">
+    <section class="hero">
         <h1>Rayyan Eka Putra</h1>
         <div class="hero-description">
             <div class="hero-cols 1">
@@ -53,14 +55,15 @@
                 <p class="label-description">
                     About Him
                 </p>
-                <p class="about-me">Known for his versatile capabilities and creative solutions, designing ideas and executing solutions.
+                <p class="about-me">Known for his versatile capabilities and creative solutions, designing ideas and
+                    executing solutions.
                     Designing professionally for companies and startups since 2021. Experienced in Web Design and UI/UX,
                     specifically prototyping and POC.</p>
             </div>
         </div>
-    </div>
+    </section>
     <!-- Work -->
-    <div class="work grid">
+    <section class="work grid">
         <div class="boxes">Box 1</div>
         <div class="boxes">Box 2</div>
         <div class="boxes">Box 3</div>
@@ -78,9 +81,9 @@
         <div class="boxes"></div>
         <div class="boxes"></div>
 
-    </div>
+    </section>
     <!-- footer -->
-     <div class="footer">
+    <section class="footer">
         <ul class="footer-socials">
             <li><a href="https://www.linkedin.com/in/rayyan-eka-putra/" target="_blank">
                     <p>Linkedin</p>
@@ -93,8 +96,9 @@
                 </a></li>
         </ul>
         <p class="credit">proudly created by rayyan ©</p>
-     </div>
-    
+    </section>
+
+    <script src="mobile-menu.js" />
 </body>
 
 </html>
