--- a/static/index.html
+++ b/static/index.html
@@ -15,6 +15,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
     <link href="
 https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css
 " rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 
 </head>
 
@@ -107,7 +108,10 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         <p class="credit">proudly created by rayyan ©</p>
     </section>
 
-    <script src="navbarAndScrolls.js" />
+    
+    <script src="navbarAndScrolls.js"></script>
+    <script src="hoverAnimation.js"></script>
+    
 </body>
 
 </html>
