dua bariski function hoverna, but it works

--- a/static/index.html
+++ b/static/index.html
@@ -47,7 +47,11 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
 
     <!-- Hero  -->
     <section data-scroll-section class="hero" id="home">
-        <h1>Rayyan Eka Putra</h1>
+        <div class="rayyan-container">
+            
+            <h1 id='test' class="rayyan">Rayyan</h1>
+            <h1 id = 'rest'class="rayyan">Eka Putra</h1>
+        </div>
         <div class="hero-description">
             <div class="hero-cols 1">
 
