--- a/static/index.html
+++ b/static/index.html
@@ -16,10 +16,10 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
 https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.css
 " rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-
+ <script src="https://cdn.jsdelivr.net/gh/sarathsaleem/grained@master/grained.js"></script>
 </head>
 
-<body data-scroll-container>
+<body data-scroll-container id = "grained">
     <!-- Navbar -->
     <ul class="navbar sticky">
         <li>
@@ -115,6 +115,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
 
     <script src="navbarAndScrolls.js"></script>
     <script src="hoverAnimation.js"></script>
+    <script src="noise.js"></script>
 
 </body>
 
