--- a/static/index.html
+++ b/static/index.html
@@ -19,14 +19,14 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
     <script src="https://cdn.jsdelivr.net/gh/sarathsaleem/grained@master/grained.js"></script>
 </head>
 
-<body data-scroll-container>
+<body data-scroll-container id="grained">
     <!-- Navbar -->
     <ul class="navbar sticky">
         <li>
             <h2><a href="#home" class="navbar-text activeLink">Home</a></h2>
         </li>
         <li>
-            <h2><a href="#work" class="navbar-text" id="workId">Work</a></h2>
+            <h2><a href="https://dribbble.com/rayyanekaputra" target="_blank" class="navbar-text" id="workId">Work</a></h2>
         </li>
         <li>
             <h2><a href="#footer " class="navbar-text">Contact</a></h2>
@@ -37,7 +37,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
             <h2><a href="./index.html">Home</a></h2>
         </li>
         <li>
-            <h2><a href="#work">Work</a></h2>
+            <h2><a href="https://dribbble.com/rayyanekaputra" target="_blank">Work</a></h2>
         </li>
         <li>
             <h2><a href="#footer">Contact</a></h2>
@@ -58,11 +58,12 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
                 <p class="label-description">
                     Work Experience
                 </p>
-                <p>Finku - Web Designer (2021-2024)<br />
+                <p> Finku - Web Designer (2021-2024)<br />
                     ONEBOX - Web Designer (2024-Present)<br />
                     Foundstrap - Web Designer (2024)<br />
-                    AfterAnother - Web Designer (2024-Present)<br />
-                    Quicksite - Design Lead (2024)</p>
+                    AfterAnother - Web Designer (2024-2025)<br />
+                    Quicksite - Design Lead (2024)<br />
+                    SOI Asia: Showcase Team - Graphics Designer (2025-Present)</p>
             </div>
             <div class="hero-cols 2">
 
@@ -77,7 +78,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         </div>
     </section>
     <!-- Work -->
-    <section data-scroll data-scroll-call="showWork" data-scroll-section class="work grid fade" id="work">
+    <!-- <section data-scroll data-scroll-call="showWork" data-scroll-section class="work grid fade" id="work">
         <div class="boxes"></div>
         <div class="boxes"></div>
         <div class="boxes"></div>
@@ -95,7 +96,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
         <div class="boxes"></div>
         <div class="boxes"></div>
 
-    </section>
+    </section> -->
     <!-- footer -->
     <section data-scroll data-scroll-call="showFooter" data-scroll-section class="footer fade" id="footer">
         <ul class="footer-socials">
@@ -108,6 +109,9 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
             <li><a href="https://instagram.com/rayyanekaputra" target="_blank">
                     <p>Instagram</p>
                 </a></li>
+            <!-- <li><a href="https://www.tiktok.com/@rayyanekaputra" target="_blank">
+                <p>Tiktok</p>
+            </a></li> -->
         </ul>
         <p class="credit">proudly created by rayyan ©</p>
     </section>
@@ -115,7 +119,7 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
     <script src="navbarAndScrolls.js"></script>
     <script src="hoverAnimation.js"></script>
     <script src="earlyFade.js"></script>
-    <!-- <script src="noise.js"></script> -->
+    <script src="noise.js"></script>
 
 </body>
 
