--- a/static/test.html
+++ b/static/test.html
@@ -84,12 +84,12 @@
     // Event listeners for the split text (now using 'char' class)
     $('#text .char').each(function () {
       $(this).on('mouseenter', function () {
-        console.log("you're in: " + $(this).text());
+        //console.log("you're in: " + $(this).text());
         gsap.to(this, { y: -15});
       });
 
       $(this).on('mouseleave', function () {
-        console.log("you're leaving: " + $(this).text());
+        //console.log("you're leaving: " + $(this).text());
         gsap.to(this, { color: '#4e4e4e' });
         gsap.to(this, { y: 0});
       });
